<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.greenwoo.presentation.auth.forgot.password.PasswordViewData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_dark"
        android:padding="@dimen/spaceNormal">

        <ImageView
            android:id="@+id/ivCancel"
            android:layout_width="@dimen/spaceNormal"
            android:layout_height="@dimen/spaceNormal"
            android:onClick="@{ v -> model.onClickBack.invoke()}"
            android:src="@drawable/ic_left_arrow_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvForgotPassword"
            style="@style/TextViewTitleLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_alternates_extra_bold"
            android:gravity="center"
            android:text="@string/forgot_password"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvResetPassword"
            style="@style/TextViewDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spaceNormalSemi"
            android:fontFamily="@font/montserrat_alternates_medium"
            android:gravity="center"
            android:text="@string/link_reset_password"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tInputMail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spaceNormal"
            android:theme="@style/TextInputLayoutDefault"
            app:layout_constraintTop_toBottomOf="@+id/tvResetPassword">

            <com.google.android.material.textfield.TextInputEditText
                style="@style/EditTextDefault"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_email_address"
                android:imeOptions="actionDone"
                android:text="@={model.mail}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnOk"
            style="@style/TextViewTitleLight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spaceNormalSemi"
            android:alpha="@{model.enableOk ? 1f : 0.5f}"
            android:background="@drawable/bg_btn"
            android:enabled="@{model.enableOk}"
            android:fontFamily="@font/montserrat_alternates_extra_bold"
            android:gravity="center"
            android:onClick="@{ v -> model.onClickInformation.invoke()}"
            android:padding="@dimen/spaceSmallSemi"
            android:text="@string/send"
            app:layout_constraintTop_toBottomOf="@id/tInputMail" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>