<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.greenwoo.presentation.auth.signup.SignUpViewData" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bg_dark">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/spaceNormal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tInputNickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutDefault"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nickname"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:maxLength="15"
                    android:text="@={model.nickname}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tInputMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/TextInputLayoutDefault"
                app:layout_constraintTop_toBottomOf="@id/tInputNickname">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mail"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:text="@={model.mail}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tInputPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceSmall"
                android:theme="@style/TextInputLayoutDefault"
                app:layout_constraintTop_toBottomOf="@id/tInputMail"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/bg_light">

                <com.google.android.material.textfield.TextInputEditText
                    style="@style/EditTextDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="20"
                    android:text="@={model.password}" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSignUp"
                style="@style/TextViewTitleLight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceNormalSemi"
                android:alpha="@{model.enableSignUp ? 1f : 0.5f}"
                android:background="@drawable/bg_btn"
                android:enabled="@{model.enableSignUp}"
                android:fontFamily="@font/montserrat_alternates_extra_bold"
                android:gravity="center"
                android:onClick="@{ v -> model.onClickSignUp.invoke()}"
                android:padding="@dimen/spaceSmallSemi"
                android:text="@string/sign_up"
                app:layout_constraintTop_toBottomOf="@id/tInputPassword" />

            <TextView
                android:id="@+id/tvSignIn"
                style="@style/TextViewDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spaceSmallSemi"
                android:fontFamily="@font/montserrat_alternates_medium"
                android:gravity="center"
                android:onClick="@{ v -> model.onClickSignIn.invoke()}"
                android:text="@string/have_account"
                app:layout_constraintTop_toBottomOf="@id/btnSignUp"
                app:spannableColor="@{@color/blue}"
                app:spannableStart="@{18}"
                app:spannableText="@{@string/have_account}" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>